# varunayan

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  eranest_demo.ipynb  latvia.geojson  netlify.toml  paper.bib  paper.md  pyproject.toml  pyrightconfig.json  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docs-versioned.yml  docs.yml  formatting.yml  gh-pages.yml  pages.yml  preview-deploy.yml  publish.yml
docs/: Makefile  README.md  changelog.md  cli_reference.rst  conf.py  contributing.rst  examples.rst  history.rst  index.md  index.rst  installation.md  installation.rst  make.bat  quickstart.rst  usage.md
docs/_static/: custom.css  custom.js  versions.json
docs/_static/css/: custom.css
docs/_templates/sidebar/: versions.html
docs/api_reference/: cli_reference.rst  core_functions.rst  index.rst  search_functions.rst
docs/notebooks/: 01_quickstart.ipynb  02_era5_imd_comparison.ipynb  03_temperature_change_india.ipynb  04_umbrella_sales_India.ipynb  05_sunscreen_sales_California.ipynb  06_malaria_dengue_public_interest_trend.ipynb  07_rainfall_peak_India.ipynb  08_era5_imd_temp_comparison.ipynb  09_pressure_level_data.ipynb  README.rst
docs/tutorials/: 01_quickstart.ipynb  02_era5_imd_comparison.ipynb  04_umbrella_sales_India.ipynb  05_sunscreen_sales_California.ipynb  06_malaria_dengue_public_interest_trend.ipynb  08_era5_imd_temp_comparison.ipynb  Demo.ipynb  Demo.md  demo_tutorial_notebook.md  index.md  india_temperature_notebook.md  sunscreen_sales_California.md  temperature_change_in_India_1941-2024.ipynb  temperature_change_in_India_1941-2024.md  umbrella_sales_India.md
eranest/: __init__.py  cli.py  config.py  constants.py  core.py  exceptions.py
eranest/aurora/: __init__.py  conversion.py
eranest/download/: __init__.py  era5.py  era5_downloader.py
eranest/processing/: __init__.py  data.py  data_aggregator.py  data_filter.py  file_handler.py
eranest/search_and_desc/: __init__.py  pressure_levels_variables.py  single_levels_variables.py
eranest/spatial/: __init__.py  filtering.py  geometry.py
eranest/util/: __init__.py  geojson_utils.py  logging_utils.py
eranest/utils/: __init__.py  io.py  validation.py
notebooks/: 01_quickstart.ipynb  02_era5_imd_comparison.ipynb  03_sunscreen_sales_California.ipynb  03_temperature_change_india.ipynb  04_umbrella_sales_India.ipynb  05_malaria_dengue_public_interest_trend.ipynb  05_sunscreen_sales_California.ipynb  06_malaria_dengue_public_interest_trend.ipynb  06_rainfall_peak_India.ipynb  07_rainfall_peak_India.ipynb  08_era5_imd_temp_comparison.ipynb  Demo.ipynb  ERA5_Aurora_Maharashtra_Demo.ipynb  India_temp_change.ipynb  eranest_India_temp_change.ipynb  eranest_aurora.ipynb  eranest_demo.ipynb  umbrella_sales_India.ipynb
notebooks/Sunscreen sales in California/: california.geojson  multiTimeline_california_googletrends_sunscreen_2004-now.csv  sunscreen_sales_california.ipynb
notebooks/Temperature change in India 1941-2024/: India_temp_change.ipynb
notebooks/Umbrella sales in India/: india.geojson  multiTimeline_india_googletrends_umbrella_2004-now.csv  umbrella_sales_india.ipynb
notebooks/output of temperature change/: temp_change_plot.ipynb  temp_change_plot_india.csv  temp_india_yearly_yearly_data.csv
scripts/: build_versioned_docs.py  convert_notebooks.py
tests/: conftest.py  test_cli.py  test_core.py  test_download.py  test_processing.py  test_search_and_desc.py  test_util.py
varunayan/: __init__.py  __main__.py  cli.py  config.py  core.py
varunayan/download/: __init__.py  era5_downloader.py
varunayan/processing/: __init__.py  data_aggregator.py  data_filter.py  file_handler.py  variable_lists.py
varunayan/search_and_desc/: __init__.py  pressure_levels_variables.py  search_and_desc_functions.py  single_levels_variables.py
varunayan/util/: __init__.py  geojson_utils.py  logging_utils.py
