[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eranest"
version = "0.1.0"
description = "ERA5 climate data downloader and processor"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "JaggeryArray" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "cdsapi",
    "xarray",
    "netCDF4",
    "numpy",
    "pandas",
    "geopandas",
    "shapely",
    "python-dateutil",
    "matplotlib",
    "tqdm",
]

[project.scripts]
eranest = "eranest.cli:main"

[project.urls]
Documentation = "https://github.com/JaggeryArray/eranest#readme"
Issues = "https://github.com/JaggeryArray/eranest/issues"
Source = "https://github.com/JaggeryArray/eranest"

[tool.hatch.build.targets.wheel]
packages = ["eranest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 